# pingcap-talent-plan

./: README.md
rust/section1/project1/: Cargo.toml
rust/section1/project1/src/: lib.rs
rust/section1/project2/: Cargo.toml
rust/section1/project2/src/: error.rs  kv.rs  lib.rs
rust/section2/project3/: Cargo.toml
rust/section2/project3/benches/: engine_benches.rs
rust/section2/project3/src/: engine.rs  error.rs  kv.rs  lib.rs  server.rs
rust/section2/project3/src/engine/: kvs.rs  sled.rs
rust/section2/project4/: Cargo.toml
rust/section2/project4/src/: client.rs  common.rs  lib.rs
