[package]
name = "kvs"
version = "0.1.0"
authors = ["ZiheLiu <ziheliu1024@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "2.33.0"
structopt = "0.3.9"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.45"
