[package]
name = "kvs"
version = "0.1.0"
authors = ["ZiheLiu <ziheliu1024@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.1"
predicates = "1.0.0"
rand = "0.7.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand_chacha = "0.2.1"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[dependencies]
clap = "2.33.0"
structopt = "0.3.9"
failure = "0.1.6"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
bincode = "1.2.1"
sled = "0.31.0"
serde_cbor = "0.11.1"

[[bench]]
name = "engine_benches"
harness = false
